# cliniwiseai-protocol-synopsis-deepagent

./: .env.example  .gitignore  README.md  compose.yaml  cursor_langchain_deepagent_server_error.md  langgraph.json  main.py  pyproject.toml  settings.py
src/: AGENTS.md  agent.py  auth.py  checkpointer.py  llm_models.py  prompts.py  store.py  subagents.py  tools.py
src/article_agent/: prompts.py  subagents.py
src/full_protocol_agent/: prompts.py  subagents.py
src/full_protocol_agent/skills/administrative_procedures/: SKILL.md
src/full_protocol_agent/skills/asessments/: SKILL.md
src/full_protocol_agent/skills/background_information/: SKILL.md
src/full_protocol_agent/skills/bioanalytical_procedures/: SKILL.md
src/full_protocol_agent/skills/data_handling_report_keeping/: SKILL.md
src/full_protocol_agent/skills/ethical_regulatory_standards/: SKILL.md
src/full_protocol_agent/skills/investigational_product_handling/: SKILL.md
src/full_protocol_agent/skills/monitoring_auditing_inspection/: SKILL.md
src/full_protocol_agent/skills/objectives_rationale/: SKILL.md
src/full_protocol_agent/skills/patient_safety/: SKILL.md
src/full_protocol_agent/skills/pharmacokinetic_statistical_analysis/: SKILL.md
src/medinfo_agent/: context.py  middleware.py  prompts.py  sub_agents.py
src/skills/inclusion_exclusion_criteria/: SKILL.md
src/skills/methodology_administration_procedure/: SKILL.md
src/skills/samplesize_products_duration/: SKILL.md
src/skills/search_existing_protocols/: SKILL.md
src/synopsis_agent/: AGENTS.md  middleware.py  prompts.py  subagents.py
(+11 files in other folders)
