[project]
name = "protocol-synopsis-deepagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clerk-backend-api>=5.0.6",
    "deepagents>=0.5.3",
    "langchain-openai>=1.1.12",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-cli[inmem]>=0.4.19",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "tavily-python>=0.7.23",
]
